Implement Hybrid WiFi Hotspot Management (Root/Proxy)
- Added Local HTTP Proxy for non-root traffic control (blocking, data limits, throttling).
- Added Root-level management via iptables and tc commands.
- Implemented persistent device settings in SharedPreferences.
- Refactored UI to use ListView and flat class structure to bypass D8 compiler bug.
- Fixed security hotspots by using absolute binary paths and ProcessBuilder.
- Comprehensive Arabic localization and instructions.